force-app/main/default/objects/Permission_WFM__mdt/Permission_WFM__mdt.object-meta.xml
<CustomObject>
    <label>Permission WFM</label>
    <pluralLabel>Permission WFM</pluralLabel>
</CustomObject>