force-app/main/default/objects/Permission_WFM__mdt/fields/Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type__c</fullName>
    <label>Agent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRS</fullName>
                <default>true</default>
                <label>MRS</label>
            </value>
            <value>
                <fullName>CDS</fullName>
            </value>
            <value>
                <fullName>BMS</fullName>
            </value>
            <value>
                <fullName>VBS</fullName>
            </value>
            <value>
                <fullName>WBS</fullName>
            </value>
            <value>
                <fullName>PBS</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>RPS</fullName>
            </value>
            <value>
                <fullName>URS</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>