force-app/main/default/objects/Permission_WFM__mdt/fields/Permission_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Name__c</fullName>
    <label>Permission Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WFM_Agent</fullName>
                <default>true</default>
                <label>WFM Agent</label>
            </value>
            <value>
                <fullName>WFM_DA</fullName>
                <label>WFM DA</label>
            </value>
            <value>
                <fullName>WFM_DC</fullName>
                <label>WFM DC</label>
            </value>
            <value>
                <fullName>WFM_SPV</fullName>
                <label>WFM SPV</label>
            </value>
            <value>
                <fullName>WFM_Agent_Leader</fullName>
                <label>WFM Agent Leader</label>
            </value>
            <value>
                <fullName>WFM_Assistant_Manager</fullName>
                <label>WFM Assistant Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>