force-app/main/default/objects/Permission_WFM__mdt/fields/User_Level__c.field-meta.xml
<CustomField>
    <fullName>User_Level__c</fullName>
    <label>User Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
                <default>true</default>
                <label>Agent</label>
            </value>
            <value>
                <fullName>Agent Leader</fullName>
            </value>
            <value>
                <fullName>SPV</fullName>
            </value>
            <value>
                <fullName>Assistant Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>